chore(examples): add yearly totals in staking rewards summary